@@ -616,6 +616,9 @@ Some default configuration options have changed:
 * (bug 6498) Use localized forms for image size in Special:Undelete
 * (bug 6485) Update to Indonesian translation (id) #24
 * Extension messages translation is now possible.
+* Add target namespace override selector for transwiki imports.
+  $wgImportTargetNamespace specifies the default, to be used for
+  Wiktionary's 'Transwiki:' namespace etc.
 
 
 == Compatibility ==
